--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -1,9 +1,6 @@
 name: Staging
 
-on:
-  pull_request:
-    branches:
-    - panasas-dev
+on: [pull_request]
 
 # This ensures that previous jobs for the PR are canceled when the PR is
 # updated.
