SG-532 Fix minio linter errors (#29)
* Update go version
* Update linter configuration
* Set linter version to use
* Fix test
* From SG-542
* Remove linter rule
* Replace os.Setenv with t.Setenv
* Fix failed test
* Fix panfs initialisation during integation tests
* Use process owner uid and gid instead of root by default

---------

Co-authored-by: Dmitri Zavadski <dmitri_zavadski@epam.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,6 +1,12 @@
 linters-settings:
   gofumpt:
-    lang-version: "1.18"
+    lang-version: "1.19"
+  revive:
+    severity: error
+    rules:
+      - name: unused-parameter
+        severity: warning
+        disabled: true
 
   misspell:
     locale: US
